# Honeycomb-Game-Engine

./: .gitignore  CMakeLists.txt  Honeycomb GE.sln  LICENSE  README.md  buildUNIX.sh
Honeycomb GE/: CMakeLists.txt  Honeycomb GE.vcxproj  Honeycomb GE.vcxproj.filters
Honeycomb GE/cmake/: findASSIMP.cmake  findGLEW.cmake  findGLFW.cmake  findOpenGL.cmake  findSOIL.cmake
Honeycomb GE/include/: HoneycombEngine.h
Honeycomb GE/include/base/: BaseGame.h  BaseMain.h  GLErrorException.h  GLItem.h  Game.h  GameInput.h  GameTime.h  GameWindow.h  Input.h  Main.h  Time.h  Window.h
Honeycomb GE/include/component/: GameComponent.h
Honeycomb GE/include/conjuncture/: Event.h  EventHandler.h
Honeycomb GE/include/core/: RenderEngine.h
Honeycomb GE/include/debug/: Logger.h
Honeycomb GE/include/file/: FileIO.h  ImageIO.h  LineOperation.h
Honeycomb GE/include/geometry/: Mesh.h  Model.h  Vertex.h
Honeycomb GE/include/graphics/: Cubemap.h  Material.h  Texture2D.h  TextureEnums.h
Honeycomb GE/include/io/: FileIO.h
Honeycomb GE/include/light/: AmbientLight.h  BaseLight.h  DirectionalLight.h
Honeycomb GE/include/math/: MathUtils.h  Matrix4f.h  Quaternion.h  Vector2f.h  Vector3f.h  Vector4f.h
Honeycomb GE/include/mesh/: Mesh.h  MeshRenderer.h  Vertex.h
Honeycomb GE/include/object/: Builder.h  Component.h  GameObject.h  GameObjectFactory.h  Object.h  Transform.h
Honeycomb GE/include/render/: Camera.h  ForwardRendererMulti.h  ForwardRendererSingle.h  LegacyForwardRenderer.h  Renderer.h  RenderingEngine.h
Honeycomb GE/include/scene/: GameScene.h
Honeycomb GE/include/shader/: GenericStruct.h  Shader.h  ShaderProgram.h  ShaderSource.h
Honeycomb GE/res/shaders/: fragShader.fs  vertexShader.vs
Honeycomb GE/src/base/: BaseGame.cpp  BaseMain.cpp  GLErrorException.cpp  GLItem.cpp  Game.cpp  GameInput.cpp  GameTime.cpp  GameWindow.cpp  Input.cpp  Main.cpp  Time.cpp  Window.cpp
Honeycomb GE/src/component/: GameComponent.cpp
Honeycomb GE/src/conjuncture/: Event.cpp  EventHandler.cpp
Honeycomb GE/src/core/: RenderEngine.cpp
Honeycomb GE/src/debug/: Logger.cpp
Honeycomb GE/src/file/: FileIO.cpp  ImageIO.cpp  LineOperation.cpp
Honeycomb GE/src/geometry/: Mesh.cpp  Model.cpp  Vertex.cpp
Honeycomb GE/src/graphics/: Cubemap.cpp  Material.cpp  Texture2D.cpp  TextureEnums.cpp
Honeycomb GE/src/io/: FileIO.cpp  Input.cpp
Honeycomb GE/src/light/: AmbientLight.cpp  BaseLight.cpp  DirectionalLight.cpp
Honeycomb GE/src/math/: MathUtils.cpp  Matrix4f.cpp  Quaternion.cpp  (+3 more)
Test Game/: CMakeLists.txt  Test Game.vcxproj  Test Game.vcxproj.filters
Test Game/include/: HoneycombTest.h  TestGame.h
Test Game/src/: HoneycombTest.cpp  Main.cpp  TestGame.cpp
(+206 files in other folders)
